<resources>
    <string name="app_name">News App</string>
    <string name="source">Source</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="published_at">Published at</string>
    <string name="search">Search…</string>
    <string name="breaking_news">Breaking News</string>
    <string name="saved_news">Saved News</string>
    <string name="search_news">Search News</string>
    <string name="my_name">Erik Rio Setiawan</string>
    <string name="my_nim">18532968 | 4C</string>
    <string name="github">Github</string>
    <string name="github_url">https://github.com/erikrios</string>
    <string name="linkedin">LinkedIn</string>
    <string name="linkedin_url">https://www.linkedin.com/in/erikriosetiawan/</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_url">https://www.facebook.com/erik.rio.setiawan</string>
    <string name="instagram">Instagram</string>
    <string name="instagram_url">https://www.instagram.com/erikriosetiawan/</string>
    <string name="about_me">About Me</string>
</resources>
